tests/gabc-dump/should-fail/unclosed-underbrace-2.gabc
name: unclosed underbrace (2);
%%
(c4) g(g) h(h[ub:1{]) i(i[ub:0{])
